--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "packages/**",
-      "projects/*"
+      "packages/**"
     ],
     "nohoist": [
       "**/vue",
@@ -28,6 +27,7 @@
     "typescript": "^4.3.4"
   },
   "scripts": {
+    "init": "lerna bootstrap",
     "test": "jest",
     "lint": "vue-cli-service lint",
     "lv": "lerna version --no-commit-hooks --no-git-tag-version --no-private",
