--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "packages/**"
+      "packages/**",
+      "projects/**"
     ],
     "nohoist": [
-      "**/vue",
-      "**/vue/**"
+      "mfe_master/**",
+      "subapp_login/**"
     ]
   },
   "devDependencies": {
