--- a/package.json
+++ b/package.json
@@ -13,26 +13,53 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.16.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
+    "@babel/plugin-syntax-flow": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@belloai/eslint-config-vue-prettier-ts": "^0.0.1",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-e2e-nightwatch": "~4.4.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-pwa": "~4.4.0",
+    "@vue/cli-plugin-router": "~4.4.0",
+    "@vue/cli-plugin-typescript": "~4.4.0",
+    "@vue/cli-plugin-unit-jest": "~4.4.0",
+    "@vue/cli-plugin-vuex": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.29.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.11.1",
-    "husky": "^6.0.0",
+    "husky": "^4.2.5",
+    "imagemin-lint-staged": "^0.4.0",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
+    "lint-staged": "^10.2.7",
     "markdownlint-cli": "^0.27.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.45.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-dts": "^4.0.1",
+    "rollup-plugin-generate-html-template": "^1.7.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2",
     "stylelint": "^13.13.1",
     "typescript": "^4.3.4"
   },
   "scripts": {
+    "test": "run-s test:unit test:e2e",
     "setup": "lerna bootstrap",
-    "test": "jest",
     "lint": "vue-cli-service lint",
-    "lv": "lerna version --no-commit-hooks --no-git-tag-version --no-private",
+    "build": "lerna run --stream --concurrency 1 --sort build",
+    "lv": "lerna version --amend --no-commit-hooks --no-git-tag-version --no-private",
     "lp": "lerna publish from-package",
     "jscpd": "jscpd .",
     "lint:all:eslint": "yarn lint:eslint --ext .js,.vue .",
