--- a/packages/mfe/package.json
+++ b/packages/mfe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@2bitlab/mfe",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "微前端相关方法",
   "keywords": [
     "微前端"
@@ -8,23 +8,27 @@
   "author": "thomasliu <thomas_0836@qq.com>",
   "homepage": "https://github.com/2bitlab/bit_f_core#readme",
   "license": "ISC",
-  "main": "lib/mfe.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
+  "module": "lib/index.esm.js",
+  "types": "lib/index.d.ts",
   "files": [
+    "src",
     "lib"
   ],
-  "publishConfig": {
-    "registry": "https://registry.npm.taobao.org/"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/2bitlab/bit_f_core.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "build": "rimraf lib/* && rollup -c",
+    "watch": "rimraf lib/* && rollup -c -w",
+    "prepublishOnly": "yarn run build"
   },
   "bugs": {
     "url": "https://github.com/2bitlab/bit_f_core/issues"
