--- a/packages/tsconfig/tsconfig.pkg.json
+++ b/packages/tsconfig/tsconfig.pkg.json
@@ -1,14 +1,24 @@
 {
   "compilerOptions": {
-    "baseUrl": "./packages",
-    "paths": {
-      "@belloai/*": ["*/src/index"] //子包映射到对应目录
-    },
-    "target": "ESNEXT",
-    "module": "ESNEXT",
-    "declaration": true,
+    "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "jsx": "preserve",
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "strict": false,
-    "esModuleInterop": true
-  }
+    "noImplicitAny": false,
+    "baseUrl": "./packages",
+    "types": ["node", "webpack-env", "jest"],
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
+    "paths": {
+      "@2bitlab/*": ["*/src/index"] //子包映射到对应目录
+    },
+    "declaration": true
+  },
+  "exclude": ["node_modules", "lib"]
 }
+// 配置含义 https://juejin.cn/post/6844904093568221191
