feat: @2bitlab/state

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
       "subapp_login/**",
       "@2bitlab/ls/**",
       "@2bitlab/fetch/**",
-      "@2bitlab/moment/**"
+      "@2bitlab/moment/**",
+      "@2bitlab/state/**"
     ]
   },
   "devDependencies": {
