--- a/packages/moment/package.json
+++ b/packages/moment/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@2bitlab/moment",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "moment 的常用工具",
   "keywords": [
     "moment"
@@ -17,6 +17,9 @@
   },
   "module": "lib/index.esm.js",
   "types": "lib/index.d.ts",
+  "main": "lib/index.common.js",
+  "unpkg": "lib/index.js",
+  "jsdelivr": "lib/index.js",
   "files": [
     "src",
     "lib"
