--- a/packages/mfe/package.json
+++ b/packages/mfe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@2bitlab/mfe",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "微前端相关方法",
   "keywords": [
     "微前端"
@@ -17,6 +17,9 @@
   },
   "module": "lib/index.esm.js",
   "types": "lib/index.d.ts",
+  "main": "lib/index.common.js",
+  "unpkg": "lib/index.js",
+  "jsdelivr": "lib/index.js",
   "files": [
     "src",
     "lib"
