--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@2bitlab/state",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "常用的state应用的构建方法",
   "keywords": [
     "state"
@@ -17,6 +17,9 @@
   },
   "module": "lib/index.esm.js",
   "types": "lib/index.d.ts",
+  "main": "lib/index.common.js",
+  "unpkg": "lib/index.js",
+  "jsdelivr": "lib/index.js",
   "files": [
     "src",
     "lib"
