--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
       "@2bitlab/moment/**",
       "@2bitlab/state/**",
       "@2bitlab/qs/**",
-      "@2bitlab/router/**"
+      "@2bitlab/router/**",
+      "@2bitlab/auth/**"
     ]
   },
   "devDependencies": {
