--- a/packages/stylelint/package.json
+++ b/packages/stylelint/package.json
@@ -6,7 +6,7 @@
     "stylelint"
   ],
   "author": "thomas-ballo <liurongliang@balloai.com>",
-  "homepage": "https://github.com/threfo/bit_f_core#readme",
+  "homepage": "https://github.com/2bitlab/bit_f_core#readme",
   "license": "ISC",
   "main": "index.js",
   "publishConfig": {
@@ -14,11 +14,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/threfo/bit_f_core.git",
+    "url": "git+https://github.com/2bitlab/bit_f_core.git",
     "directory": "packages/eslint-config-vue-prettier-ts"
   },
   "bugs": {
-    "url": "https://github.com/threfo/bit_f_core/issues"
+    "url": "https://github.com/2bitlab/bit_f_core/issues"
   },
   "dependencies": {
     "stylelint-config-css-modules": "2.2.x",
