fix: change name to @2bitlab/dev-pkg

--- a/packages/devPkg/package.json
+++ b/packages/devPkg/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@2bitlab/devPkg",
+  "name": "@2bitlab/dev-pkg",
   "version": "1.0.0",
   "description": "2bitlab 前端 vue 项目开发依赖",
   "keywords": [
