--- a/packages/mfe/package.json
+++ b/packages/mfe/package.json
@@ -35,5 +35,11 @@
   },
   "bugs": {
     "url": "https://github.com/2bitlab/bit_f_core/issues"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.176"
   }
 }
